--- a/style.css
+++ b/style.css
@@ -604,7 +604,7 @@ footer {
   border: 1px solid red;
 } */
 .hero-a {
-  background-image: url(images/about\ us\ image.jpg);
+  background-image: url(images/compressimage/wooden-judges.jpg);
   height: 320px;
   width: 100%;
   object-fit: cover;
