--- a/style.css
+++ b/style.css
@@ -641,7 +641,7 @@ footer {
 }
 
 .box2-about {
-  background-image: url(../images/compressimage/about1.jpg);
+  background-image: url(images/compressimage/about1.jpg);
   position: relative;
 }
 .exe-box {
